# ml-ops

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-container.yaml  build-helm.yaml  build.yaml  deploy-gh-page.yaml  deploy-helm-charts.yaml  deploy-service.yml  gh-pages.yaml  tag.yaml
app/: __init__.py  main.py  models.py  utils.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helper.tpl  deployment.yaml  pvc.yaml
charts/iris-classifier/: Chart.yaml  README.md  values.yaml
charts/iris-classifier/templates/: _helper.tpl  ingress.yaml  pvc.yaml  service-monitor.yaml  service.yaml
deployment/applications/cert-manager/v1.17.1-v1/: helm-release.yaml  repo.yaml
deployment/applications/iris/v1.2.0+v1/: release.yaml  repo.yaml
deployment/base/iris-v1.0.0+v1/: release.yaml  repo.yaml
deployment/base/namespace+v1/: namespace.yaml
deployment/clusters/dev/: app.yaml  infra.yaml
deployment/clusters/prod/: app.yaml  infra.yaml  kustomization.yaml
deployment/clusters/stage/: app.yaml  infra.yaml
deployment/overlays/dev/: kustomization.yaml  values.yaml
deployment/overlays/stage/: kustomization.yaml
docs/: design.md
flux-system/: gotk-sync.yaml
gh-pages/: index.html  index.yaml  iris-classifier-v1.0.0.tgz  iris-classifier-v1.1.0.tgz  iris-classifier-v1.2.0.tgz  iris-classifier-v1.3.0.tgz  iris-classifier-v1.4.0.tgz
model/: __init__.py  config.py  train.py
scripts/: kind.sh
tests/: conftest.py
tests/features/: predict.feature
tests/features/steps/: test_predict_steps.py
(+22 files in other folders)
