[tool.poetry]
name = "iris-mlops"
version = "1.0.0"
description = "MLOps project for Iris flower classification"
authors = ["Hrishi <hello@hrishi.dev>"]
readme = "README.md"
packages = [
    {include = "app"},
    {include = "model"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.21.1"
pydantic = "^2.9.2"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
joblib = "^1.2.0"
numpy = "^1.24.3"
prometheus-client = "^0.16.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-bdd = "^6.1.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]